Fix skiplink outline not being visible in forced colours
As skiplinks are usually present right at the top of the viewport and at full width, the outline style we apply to links in forced-colors mode is clipped on three of the four sides. This commit changes the outline-offset in forced-colors so that it is visible within the bounds of the skip link.

--- a/packages/govuk-frontend/src/govuk/components/skip-link/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/skip-link/_index.scss
@@ -24,6 +24,10 @@
       outline-offset: 0;
       background-color: $govuk-focus-colour;
 
+      @media (forced-colors: active) {
+        outline-offset: (0 - $govuk-focus-width);
+      }
+
       // Undo unwanted changes when global styles are enabled
       @if $govuk-global-styles {
         @include govuk-link-decoration;
